--- a/cie/Cie.ipynb
+++ b/cie/Cie.ipynb
@@ -821,9 +821,31 @@
     "deepnote_cell_type": "markdown"
    },
    "source": [
-    "# 3. Resumen de los cambios realizados\n",
+    "# 4. Cambios propuestos\n",
     "\n",
-    "Al haber analizado los datos, se encuentra que no se deben realizar modificaciones adicionales."
+    "\n",
+    "**Fuente de datos**\n",
+    "Cie\n",
+    "\n",
+    "Campos\n",
+    "- COD_4\t\n",
+    "- DESCRIPCION CODIGOS DE CUATRO CARACTERES\n",
+    "\n",
+    "**Extraer informacion de**  \n",
+    "regiones\n",
+    "\n",
+    "**Transformaciones**\n",
+    "\n",
+    "1. Renombrar COD_4 a cod_causa_basica\n",
+    "2. Renombrar DESCRIPCION CODIGOS DE CUATRO CARACTERES a causa_basica\n",
+    "\n",
+    "\n",
+    "**Carga de datos**\n",
+    "Destino de datos: Dim_Muerte\n",
+    "\n",
+    "Campos:\n",
+    "- Cod_causa_basica  \n",
+    "- Causa_basica   \n"
    ]
   }
  ],
