--- a/municipios/Regiones.ipynb
+++ b/municipios/Regiones.ipynb
@@ -707,8 +707,41 @@
     "deepnote_cell_type": "markdown"
    },
    "source": [
-    "# 4. Resumen de los cambios realizados\n",
-    "Al haber analizado los datos, se encuentra que no se deben realizar modificaciones adicionales."
+    "# 4. Cambios propuestos\n",
+    "\n",
+    "\n",
+    "**Fuente de datos**\n",
+    "Regiones\n",
+    "\n",
+    "Campos\n",
+    "- REGION\t\n",
+    "- CÓDIGO DANE DEL DEPARTAMENTO\t\n",
+    "- DEPARTAMENTO\t\n",
+    "- CÓDIGO DANE DEL MUNICIPIO\t\n",
+    "- MUNICIPIO\n",
+    "\n",
+    "\n",
+    "**Extraer informacion de**  \n",
+    "regiones\n",
+    "\n",
+    "**Transformaciones**\n",
+    "1. Eliminar la parte entera del CÓDIGO DANE DEL MUNICIPIO y transformarlo a un string numerico de 3 digitos, rellenando con 0's a la derecha de ser necesario\n",
+    "2. Renombrar CÓDIGO DANE DEL DEPARTAMENTO a Cod_departamento\n",
+    "3. Renombrar CÓDIGO DANE DEL MUNICIPIO a Cod_municipio\n",
+    "\n",
+    "\n",
+    "**Carga de datos**\n",
+    "Destino de datos: Dim_Localización_Geografica\n",
+    "\n",
+    "Campos:\n",
+    "- Region  \n",
+    "- Cod_departamento  \n",
+    "- departamento  \n",
+    "- Cod_municipio  \n",
+    "- municipio  \n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
