--- a/salud/Salud.ipynb
+++ b/salud/Salud.ipynb
@@ -1736,45 +1736,45 @@
     "## 2.1.3. Análisis de validez\n",
     "De acuerdo al diccionario de datos del año 2022, se deberian tener los siguientes posibles valores por cada atributo:\n",
     "\n",
-    "** ¿Está embarazada? **\n",
-    "1 Si\n",
-    "2 No\n",
+    "** ¿Está embarazada? **  \n",
+    "1 Si  \n",
+    "2 No  \n",
     "\n",
-    "** ¿Asiste a control prenatal? **\n",
-    "1 Sí\n",
-    "2 No\n",
-    "3 No está embarazada\n",
+    "** ¿Asiste a control prenatal? **  \n",
+    "1 Sí  \n",
+    "2 No  \n",
+    "3 No está embarazada  \n",
     "\n",
     "** ¿Está afiliado? **\n",
-    "1 Si\n",
-    "2 No\n",
-    "9 No sabe, no informa\n",
+    "1 Si  \n",
+    "2 No  \n",
+    "9 No sabe, no informa  \n",
     "\n",
     "\n",
     "** ¿A qué regimen está afiliado? **\n",
-    "1 Contributivo (eps)\n",
-    "2 Especial (fuerzas armadas, ecopetrol, universidades públicas, magisterio)\n",
-    "3 Subsidiado (eps-s)\n",
-    "9 No sabe, no informa\n",
+    "1 Contributivo (eps)  \n",
+    "2 Especial (fuerzas armadas, ecopetrol, universidades públicas, magisterio)  \n",
+    "3 Subsidiado (eps-s)  \n",
+    "9 No sabe, no informa  \n",
     "\n",
     "** ¿Cómo es la calidad del servicio? **\n",
-    "1 Muy buena\n",
-    "2 Buena\n",
-    "3 Mala\n",
-    "4 Muy mala\n",
-    "9 No sabe\n",
+    "1 Muy buena  \n",
+    "2 Buena  \n",
+    "3 Mala  \n",
+    "4 Muy mala  \n",
+    "9 No sabe  \n",
     "\n",
     "** ¿Por qué no está afiliado? **\n",
-    "1 Por falta de dinero\n",
-    "2 Muchos trámites\n",
-    "3 No le interesa o descuido\n",
-    "4 No sabe que debe afiliarse\n",
-    "5 No está vinculado/a laboralmente a una empresa o entidad (Usted o la persona de la que es beneficiario/a)\n",
-    "6 Está en trámite de afiliación\n",
-    "7 Problemas con el Sisben (no lo/a han visitado, afiliado/a en otro municipio, lo/a desvincularon, le asignaron puntaje alto)\n",
-    "8 Falta de documentación\n",
-    "9 Otra razón\n",
-    "\n",
+    "1 Por falta de dinero  \n",
+    "2 Muchos trámites  \n",
+    "3 No le interesa o descuido  \n",
+    "4 No sabe que debe afiliarse  \n",
+    "5 No está vinculado/a laboralmente a una empresa o entidad (Usted o la persona de la que es beneficiario/a)  \n",
+    "6 Está en trámite de afiliación  \n",
+    "7 Problemas con el Sisben (no lo/a han visitado, afiliado/a en otro municipio, lo/a desvincularon, le asignaron puntaje alto)  \n",
+    "8 Falta de documentación  \n",
+    "9 Otra razón  \n",
+    " \n",
     "\n",
     "\n",
     "\n",
@@ -1853,7 +1853,272 @@
     "deepnote_cell_type": "markdown"
    },
    "source": [
-    "# 3. Resumen de los cambios realizados"
+    "# 4. Cambios propuestos\n",
+    "\n",
+    "## 2017\n",
+    "**Fuente de datos**  \n",
+    "Salud2017\n",
+    "\n",
+    "Campos\n",
+    "- P5694\t\n",
+    "- P6181\n",
+    "- P5672\n",
+    "\n",
+    "**Extraer informacion de**  \n",
+    "Salud2017\n",
+    "\n",
+    "**Transformaciones**\n",
+    "1. Eliminar la parte entera del CÓDIGO DANE DEL MUNICIPIO y transformarlo a un string numerico de 3 digitos, rellenando con 0's a la derecha de ser necesario\n",
+    "2. Renombrar P5694 a asiste_control_prenatal\n",
+    "3. Renombrar P5672 a embarazada_o_con_hijos\n",
+    "4. Renombrar P6181 a satisfaccion_seguridad_social\n",
+    "5. Convertir los valores de asiste_control_prenatal: \"Si\" si es 1, \"No\" si es 2, \"No está embarazada\" si es 3, null en otro caso.\n",
+    "6. Convertir los valores de embarazada_o_con_hijos: \"Si\" si es 1, \"No\" si es 2.\n",
+    "7. Convertir los valores de satisfaccion_seguridad_social: \"Muy buena\" si es 1, \"Buena\" si es 2, \"Mala\" si es 3, \"Muy mala\" si es 4, \"No sabe\" si es 9.\n",
+    "\n",
+    "\n",
+    "\n",
+    "Destino de datos: Hecho_Encuesta_Salud\n",
+    "\n",
+    "Campos:\n",
+    "- satisfaccion_seguridad_social\n",
+    "- embarazada_o_con_hijos\n",
+    "- asiste_control_prenatal\n",
+    "\n",
+    "\n",
+    "**Fuente de datos**  \n",
+    "Salud2017\n",
+    "\n",
+    "**Extraer informacion de**  \n",
+    "Salud2017\n",
+    "\n",
+    "**Transformaciones**\n",
+    "1. Añadir la columna anio, que tiene un valor de 2017 para cada registro\n",
+    "2. Crear columna idFecha a partir del anio\n",
+    "\n",
+    "\n",
+    "Destino de datos: Dim_Fecha\n",
+    "\n",
+    "Campos:\n",
+    "- Anio\n",
+    "- idFecha\n",
+    "\n",
+    "\n",
+    "**Fuente de datos**  \n",
+    "Salud2017\n",
+    "\n",
+    "campos  \n",
+    "- P6100\n",
+    "\n",
+    "**Extraer informacion de**  \n",
+    "Salud2017\n",
+    "\n",
+    "**Transformaciones**\n",
+    "1. Renombrar P6100 a regimen_seguridad_social\n",
+    "\n",
+    "\n",
+    "Destino de datos: Dim_Encuestado\n",
+    "\n",
+    "Campos:\n",
+    "- regimen_seguridad_social\n",
+    "\n",
+    "## 2018\n",
+    "**Fuente de datos**  \n",
+    "Salud2018\n",
+    "\n",
+    "Campos\n",
+    "- P5694\t\n",
+    "- P6181\n",
+    "- P5672\n",
+    "\n",
+    "**Extraer informacion de**  \n",
+    "Salud2018\n",
+    "\n",
+    "**Transformaciones**\n",
+    "1. Eliminar la parte entera del CÓDIGO DANE DEL MUNICIPIO y transformarlo a un string numerico de 3 digitos, rellenando con 0's a la derecha de ser necesario\n",
+    "2. Renombrar P5694 a asiste_control_prenatal\n",
+    "3. Renombrar P5672 a embarazada_o_con_hijos\n",
+    "4. Renombrar P6181 a satisfaccion_seguridad_social\n",
+    "5. Convertir los valores de asiste_control_prenatal: \"Si\" si es 1, \"No\" si es 2, \"No está embarazada\" si es 3, null en otro caso.\n",
+    "6. Convertir los valores de embarazada_o_con_hijos: \"Si\" si es 1, \"No\" si es 2.\n",
+    "7. Convertir los valores de satisfaccion_seguridad_social: \"Muy buena\" si es 1, \"Buena\" si es 2, \"Mala\" si es 3, \"Muy mala\" si es 4, \"No sabe\" si es 9.\n",
+    "\n",
+    "\n",
+    "\n",
+    "Destino de datos: Hecho_Encuesta_Salud\n",
+    "\n",
+    "Campos:\n",
+    "- satisfaccion_seguridad_social\n",
+    "- embarazada_o_con_hijos\n",
+    "- asiste_control_prenatal\n",
+    "\n",
+    "\n",
+    "**Fuente de datos**  \n",
+    "Salud2018\n",
+    "\n",
+    "**Extraer informacion de**  \n",
+    "Salud2018\n",
+    "\n",
+    "**Transformaciones**\n",
+    "1. Añadir la columna anio, que tiene un valor de 2018 para cada registro\n",
+    "2. Crear columna idFecha a partir del anio\n",
+    "\n",
+    "\n",
+    "Destino de datos: Dim_Fecha\n",
+    "\n",
+    "Campos:\n",
+    "- Anio\n",
+    "- idFecha\n",
+    "\n",
+    "**Fuente de datos**  \n",
+    "Salud2018\n",
+    "\n",
+    "campos  \n",
+    "- P6100\n",
+    "\n",
+    "**Extraer informacion de**  \n",
+    "Salud2018\n",
+    "\n",
+    "**Transformaciones**\n",
+    "1. Renombrar P6100 a regimen_seguridad_social\n",
+    "\n",
+    "\n",
+    "Destino de datos: Dim_Encuestado\n",
+    "\n",
+    "Campos:\n",
+    "- regimen_seguridad_social\n",
+    "\n",
+    "## 2021\n",
+    "**Fuente de datos**  \n",
+    "Salud2021\n",
+    "\n",
+    "Campos\n",
+    "- P5694\t\n",
+    "- P6181\n",
+    "- P3335\n",
+    "\n",
+    "**Extraer informacion de**  \n",
+    "Salud2021\n",
+    "\n",
+    "**Transformaciones**\n",
+    "1. Eliminar la parte entera del CÓDIGO DANE DEL MUNICIPIO y transformarlo a un string numerico de 3 digitos, rellenando con 0's a la derecha de ser necesario\n",
+    "2. Renombrar P5694 a asiste_control_prenatal\n",
+    "3. Renombrar P3335 a embarazada_o_con_hijos\n",
+    "4. Renombrar P6181 a satisfaccion_seguridad_social\n",
+    "5. Convertir los valores de asiste_control_prenatal: \"Si\" si es 1, \"No\" si es 2, \"No está embarazada\" si es 3, null en otro caso.\n",
+    "6. Convertir los valores de embarazada_o_con_hijos: \"Si\" si es 1, \"No\" si es 2.\n",
+    "7. Convertir los valores de satisfaccion_seguridad_social: \"Muy buena\" si es 1, \"Buena\" si es 2, \"Mala\" si es 3, \"Muy mala\" si es 4, \"No sabe\" si es 9.\n",
+    "\n",
+    "\n",
+    "\n",
+    "Destino de datos: Hecho_Encuesta_Salud\n",
+    "\n",
+    "Campos:\n",
+    "- satisfaccion_seguridad_social\n",
+    "- embarazada_o_con_hijos\n",
+    "- asiste_control_prenatal\n",
+    "\n",
+    "\n",
+    "**Fuente de datos**  \n",
+    "Salud2021\n",
+    "\n",
+    "**Extraer informacion de**  \n",
+    "Salud2021\n",
+    "\n",
+    "**Transformaciones**\n",
+    "1. Añadir la columna anio, que tiene un valor de 2021 para cada registro\n",
+    "2. Crear columna idFecha a partir del anio\n",
+    "\n",
+    "\n",
+    "Destino de datos: Dim_Fecha\n",
+    "\n",
+    "Campos:\n",
+    "- Anio\n",
+    "- idFecha\n",
+    "\n",
+    "**Fuente de datos**  \n",
+    "Salud2021\n",
+    "\n",
+    "campos  \n",
+    "- P6100\n",
+    "\n",
+    "**Extraer informacion de**  \n",
+    "Salud2021\n",
+    "\n",
+    "**Transformaciones**\n",
+    "1. Renombrar P6100 a regimen_seguridad_social\n",
+    "\n",
+    "\n",
+    "Destino de datos: Dim_Encuestado\n",
+    "\n",
+    "Campos:\n",
+    "- regimen_seguridad_social\n",
+    "\n",
+    "## 2022\n",
+    "**Fuente de datos**  \n",
+    "Salud2022\n",
+    "\n",
+    "Campos\n",
+    "- P5694\t\n",
+    "- P6181\n",
+    "- P3335\n",
+    "\n",
+    "**Extraer informacion de**  \n",
+    "Salud2022\n",
+    "\n",
+    "**Transformaciones**\n",
+    "1. Eliminar la parte entera del CÓDIGO DANE DEL MUNICIPIO y transformarlo a un string numerico de 3 digitos, rellenando con 0's a la derecha de ser necesario\n",
+    "2. Renombrar P5694 a asiste_control_prenatal\n",
+    "3. Renombrar P3335 a embarazada_o_con_hijos\n",
+    "4. Renombrar P6181 a satisfaccion_seguridad_social\n",
+    "5. Convertir los valores de asiste_control_prenatal: \"Si\" si es 1, \"No\" si es 2, \"No está embarazada\" si es 3, null en otro caso.\n",
+    "6. Convertir los valores de embarazada_o_con_hijos: \"Si\" si es 1, \"No\" si es 2.\n",
+    "7. Convertir los valores de satisfaccion_seguridad_social: \"Muy buena\" si es 1, \"Buena\" si es 2, \"Mala\" si es 3, \"Muy mala\" si es 4, \"No sabe\" si es 9.\n",
+    "\n",
+    "\n",
+    "\n",
+    "Destino de datos: Hecho_Encuesta_Salud\n",
+    "\n",
+    "Campos:\n",
+    "- satisfaccion_seguridad_social\n",
+    "- embarazada_o_con_hijos\n",
+    "- asiste_control_prenatal\n",
+    "\n",
+    "\n",
+    "**Fuente de datos**  \n",
+    "Salud2022\n",
+    "\n",
+    "**Extraer informacion de**  \n",
+    "Salud2022\n",
+    "\n",
+    "**Transformaciones**\n",
+    "1. Añadir la columna anio, que tiene un valor de 2022 para cada registro\n",
+    "2. Crear columna idFecha a partir del anio\n",
+    "\n",
+    "\n",
+    "Destino de datos: Dim_Fecha\n",
+    "\n",
+    "Campos:\n",
+    "- Anio\n",
+    "- idFecha\n",
+    "\n",
+    "**Fuente de datos**  \n",
+    "Salud2022\n",
+    "\n",
+    "campos  \n",
+    "- P6100\n",
+    "\n",
+    "**Extraer informacion de**  \n",
+    "Salud2022\n",
+    "\n",
+    "**Transformaciones**\n",
+    "1. Renombrar P6100 a regimen_seguridad_social\n",
+    "\n",
+    "\n",
+    "Destino de datos: Dim_Encuestado\n",
+    "\n",
+    "Campos:\n",
+    "- regimen_seguridad_social"
    ]
   }
  ],
