cambios formato resumen salud

--- a/defunciones/Fetal.ipynb
+++ b/defunciones/Fetal.ipynb
@@ -3942,49 +3942,41 @@
     "# 4. Cambios propuestos\n",
     "\n",
     "**Fuente de datos**\n",
-    "Fetal2017, Fetal2018, Fetal2021, Fetal2022\n",
+    "Fetal2017\n",
     "\n",
     "Campos  \n",
-    "- COD_DPTO\n",
-    "- COD_MUNIC\n",
-    "- A_DEFUN\n",
-    "- SIT_DEFUN\n",
-    "- ANO\n",
-    "- MES\n",
-    "- C_BAS1\n",
     "- MU_PARTO\n",
-    "- T_PARTO\n",
-    "- TIPO_EMB\n",
-    "- CONS_EXP\n",
-    "- IDPROFCER\n",
+    "- ASIS_MED\n",
     "- N_HIJOSV\n",
     "- N_HIJOSM\n",
-    "- EDAD_MADRE\n",
-    "- CODPTORE\n",
-    "- CODMUNRE\n",
-    "- AREA_RES\n",
-    "- SEG_SOCIAL\n",
-    "- EST_CIVM\n",
-    "- NIV_EDUM\n",
-    "- ULTCURMAD\n",
-    "- ASIS_MED\n",
-    "- SEXO\n",
+    "- PESO_NAC\n",
     "- T_GES\n",
     "- T_GES_AGRU_CIE\n",
-    "- PESO_NAC\n",
     "\n",
     "**Extraer informacion de**  \n",
-    "Defunciones fetales\n",
+    "Fetal2017\n",
+    "\n",
+    "muerte_relacionada_parto\n",
+    "recibio_asistencia_medica\n",
+    "num_hijos_nacidos_vivos_madre\n",
+    "num_hijos_nacidos_muertos_madre\n",
+    "peso_nacido_vivo\n",
+    "tiempo_gestacion\n",
+    "tiempo_gestacion_CIE\n",
     "\n",
     "**Transformaciones**\n",
-    "1. Eliminar la parte entera del CÓDIGO DANE DEL MUNICIPIO y transformarlo a un string numerico de 3 digitos, rellenando con 0's a la derecha de ser necesario\n",
-    "2. Renombrar P5694 a asiste_control_prenatal\n",
-    "3. Renombrar P5672 a embarazada_o_con_hijos\n",
-    "4. Renombrar P6181 a satisfaccion_seguridad_social\n",
-    "5. Convertir los valores de asiste_control_prenatal: \"Si\" si es 1, \"No\" si es 2, \"No está embarazada\" si es 3, null en otro caso.\n",
-    "6. Convertir los valores de embarazada_o_con_hijos: \"Si\" si es 1, \"No\" si es 2.\n",
-    "7. Convertir los valores de satisfaccion_seguridad_social: \"Muy buena\" si es 1, \"Buena\" si es 2, \"Mala\" si es 3, \"Muy mala\" si es 4, \"No sabe\" si es 9.\n",
-    "9. Añadir la columna año, que tiene un valor de 2017 o 2018 según el archivo\n",
+    "1. Renombrar MU_PARTO a muerte_relacionada_parto\n",
+    "2. Renombrar ASIS_MED a recibio_asistencia_medica\n",
+    "3. Renombrar N_HIJOSV a num_hijos_nacidos_vivos_madre\n",
+    "3. Renombrar N_HIJOSM a num_hijos_nacidos_muertos_madre\n",
+    "3. Renombrar PESO_NAC a peso_nacido_vivo\n",
+    "3. Renombrar T_GES a tiempo_gestacion\n",
+    "3. Renombrar T_GES_AGRU_CIE a tiempo_gestacion_CIE\n",
+    "4. Eliminar registros duplicados\n",
+    "4. Convertir los valores de asiste_control_prenatal: \"Si\" si es 1, \"No\" si es 2, \"No está embarazada\" si es 3, null en otro caso.\n",
+    "5. Convertir los valores de embarazada_o_con_hijos: \"Si\" si es 1, \"No\" si es 2.\n",
+    "6. Convertir los valores de satisfaccion_seguridad_social: \"Muy buena\" si es 1, \"Buena\" si es 2, \"Mala\" si es 3, \"Muy mala\" si es 4, \"No sabe\" si es 9.\n",
+    "7. Añadir la columna año, que tiene un valor de 2017 o 2018 según el archivo\n",
     "\n",
     "\n",
     "Destino de datos: Hecho_Defuncion_Fetal\n",
