--- a/salud/Salud.ipynb
+++ b/salud/Salud.ipynb
@@ -1855,9 +1855,9 @@
    "source": [
     "# 4. Cambios propuestos\n",
     "\n",
-    "## 2017\n",
+    "## Hecho_Encuesta_Salud\n",
     "**Fuente de datos**  \n",
-    "Salud2017\n",
+    "Salud2017, Salud2018\n",
     "\n",
     "Campos\n",
     "- P5694\t\n",
@@ -1865,7 +1865,7 @@
     "- P5672\n",
     "\n",
     "**Extraer informacion de**  \n",
-    "Salud2017\n",
+    "Salud2017, Salud2018\n",
     "\n",
     "**Transformaciones**\n",
     "1. Renombrar P5694 a asiste_control_prenatal\n",
@@ -1875,8 +1875,6 @@
     "5. Convertir los valores de embarazada_o_con_hijos: \"Si\" si es 1, \"No\" si es 2.\n",
     "6. Convertir los valores de satisfaccion_seguridad_social: \"Muy buena\" si es 1, \"Buena\" si es 2, \"Mala\" si es 3, \"Muy mala\" si es 4, \"No sabe\" si es 9.\n",
     "\n",
-    "\n",
-    "\n",
     "Destino de datos: Hecho_Encuesta_Salud\n",
     "\n",
     "Campos:\n",
@@ -1884,111 +1882,8 @@
     "- embarazada_o_con_hijos\n",
     "- asiste_control_prenatal\n",
     "\n",
-    "\n",
     "**Fuente de datos**  \n",
-    "Salud2017\n",
-    "\n",
-    "**Extraer informacion de**  \n",
-    "Salud2017\n",
-    "\n",
-    "**Transformaciones**\n",
-    "1. Añadir la columna anio, que tiene un valor de 2017 para cada registro\n",
-    "2. Crear columna idFecha a partir del anio\n",
-    "\n",
-    "\n",
-    "Destino de datos: Dim_Fecha\n",
-    "\n",
-    "Campos:\n",
-    "- Anio\n",
-    "- idFecha\n",
-    "\n",
-    "\n",
-    "**Fuente de datos**  \n",
-    "Salud2017\n",
-    "\n",
-    "campos  \n",
-    "- P6100\n",
-    "\n",
-    "**Extraer informacion de**  \n",
-    "Salud2017\n",
-    "\n",
-    "**Transformaciones**\n",
-    "1. Renombrar P6100 a regimen_seguridad_social\n",
-    "\n",
-    "\n",
-    "Destino de datos: Dim_Encuestado\n",
-    "\n",
-    "Campos:\n",
-    "- regimen_seguridad_social\n",
-    "\n",
-    "## 2018\n",
-    "**Fuente de datos**  \n",
-    "Salud2018\n",
-    "\n",
-    "Campos\n",
-    "- P5694\t\n",
-    "- P6181\n",
-    "- P5672\n",
-    "\n",
-    "**Extraer informacion de**  \n",
-    "Salud2018\n",
-    "\n",
-    "**Transformaciones**\n",
-    "1. Renombrar P5694 a asiste_control_prenatal\n",
-    "2. Renombrar P5672 a embarazada_o_con_hijos\n",
-    "3. Renombrar P6181 a satisfaccion_seguridad_social\n",
-    "4. Convertir los valores de asiste_control_prenatal: \"Si\" si es 1, \"No\" si es 2, \"No está embarazada\" si es 3, null en otro caso.\n",
-    "5. Convertir los valores de embarazada_o_con_hijos: \"Si\" si es 1, \"No\" si es 2.\n",
-    "6. Convertir los valores de satisfaccion_seguridad_social: \"Muy buena\" si es 1, \"Buena\" si es 2, \"Mala\" si es 3, \"Muy mala\" si es 4, \"No sabe\" si es 9.\n",
-    "\n",
-    "\n",
-    "\n",
-    "Destino de datos: Hecho_Encuesta_Salud\n",
-    "\n",
-    "Campos:\n",
-    "- satisfaccion_seguridad_social\n",
-    "- embarazada_o_con_hijos\n",
-    "- asiste_control_prenatal\n",
-    "\n",
-    "\n",
-    "**Fuente de datos**  \n",
-    "Salud2018\n",
-    "\n",
-    "**Extraer informacion de**  \n",
-    "Salud2018\n",
-    "\n",
-    "**Transformaciones**\n",
-    "1. Añadir la columna anio, que tiene un valor de 2018 para cada registro\n",
-    "2. Crear columna idFecha a partir del anio\n",
-    "\n",
-    "\n",
-    "Destino de datos: Dim_Fecha\n",
-    "\n",
-    "Campos:\n",
-    "- Anio\n",
-    "- idFecha\n",
-    "\n",
-    "**Fuente de datos**  \n",
-    "Salud2018\n",
-    "\n",
-    "campos  \n",
-    "- P6100\n",
-    "\n",
-    "**Extraer informacion de**  \n",
-    "Salud2018\n",
-    "\n",
-    "**Transformaciones**\n",
-    "1. Renombrar P6100 a regimen_seguridad_social\n",
-    "\n",
-    "\n",
-    "Destino de datos: Dim_Encuestado\n",
-    "\n",
-    "Campos:\n",
-    "- regimen_seguridad_social\n",
-    "\n",
-    "## 2021\n",
-    "**Fuente de datos**  \n",
-    "Salud2021\n",
+    "Salud2021, Salud2022\n",
     "\n",
     "Campos\n",
     "- P5694\t\n",
@@ -1996,7 +1891,7 @@
     "- P3335\n",
     "\n",
     "**Extraer informacion de**  \n",
-    "Salud2021\n",
+    "Salud2021, Salud2022\n",
     "\n",
     "**Transformaciones**\n",
     "1. Renombrar P5694 a asiste_control_prenatal\n",
@@ -2006,8 +1901,6 @@
     "5. Convertir los valores de embarazada_o_con_hijos: \"Si\" si es 1, \"No\" si es 2.\n",
     "6. Convertir los valores de satisfaccion_seguridad_social: \"Muy buena\" si es 1, \"Buena\" si es 2, \"Mala\" si es 3, \"Muy mala\" si es 4, \"No sabe\" si es 9.\n",
     "\n",
-    "\n",
-    "\n",
     "Destino de datos: Hecho_Encuesta_Salud\n",
     "\n",
     "Campos:\n",
@@ -2015,15 +1908,16 @@
     "- embarazada_o_con_hijos\n",
     "- asiste_control_prenatal\n",
     "\n",
+    "## Dim_Fecha\n",
     "\n",
     "**Fuente de datos**  \n",
-    "Salud2021\n",
+    "Salud2017, Salud2018, Salud2021, Salud2022\n",
     "\n",
     "**Extraer informacion de**  \n",
-    "Salud2021\n",
+    "Salud2017, Salud2018, Salud2021, Salud2022\n",
     "\n",
     "**Transformaciones**\n",
-    "1. Añadir la columna anio, que tiene un valor de 2021 para cada registro\n",
+    "1. Añadir la columna anio, que tiene el valor del año correspondiente al archivo\n",
     "2. Crear columna idFecha a partir del anio\n",
     "\n",
     "\n",
@@ -2033,14 +1927,17 @@
     "- Anio\n",
     "- idFecha\n",
     "\n",
+    "\n",
+    "## Dim_Encuestado\n",
+    "\n",
     "**Fuente de datos**  \n",
-    "Salud2021\n",
+    "Salud2017, Salud2018, Salud2021, Salud2022\n",
     "\n",
     "campos  \n",
     "- P6100\n",
     "\n",
     "**Extraer informacion de**  \n",
-    "Salud2021\n",
+    "Salud2017, Salud2018, Salud2021, Salud2022\n",
     "\n",
     "**Transformaciones**\n",
     "1. Renombrar P6100 a regimen_seguridad_social\n",
@@ -2050,71 +1947,7 @@
     "\n",
     "Campos:\n",
     "- regimen_seguridad_social\n",
-    "\n",
-    "## 2022\n",
-    "**Fuente de datos**  \n",
-    "Salud2022\n",
-    "\n",
-    "Campos\n",
-    "- P5694\t\n",
-    "- P6181\n",
-    "- P3335\n",
-    "\n",
-    "**Extraer informacion de**  \n",
-    "Salud2022\n",
-    "\n",
-    "**Transformaciones**\n",
-    "1. Renombrar P5694 a asiste_control_prenatal\n",
-    "2. Renombrar P3335 a embarazada_o_con_hijos\n",
-    "3. Renombrar P6181 a satisfaccion_seguridad_social\n",
-    "4. Convertir los valores de asiste_control_prenatal: \"Si\" si es 1, \"No\" si es 2, \"No está embarazada\" si es 3, null en otro caso.\n",
-    "5. Convertir los valores de embarazada_o_con_hijos: \"Si\" si es 1, \"No\" si es 2.\n",
-    "6. Convertir los valores de satisfaccion_seguridad_social: \"Muy buena\" si es 1, \"Buena\" si es 2, \"Mala\" si es 3, \"Muy mala\" si es 4, \"No sabe\" si es 9.\n",
-    "\n",
-    "\n",
-    "\n",
-    "Destino de datos: Hecho_Encuesta_Salud\n",
-    "\n",
-    "Campos:\n",
-    "- satisfaccion_seguridad_social\n",
-    "- embarazada_o_con_hijos\n",
-    "- asiste_control_prenatal\n",
-    "\n",
-    "\n",
-    "**Fuente de datos**  \n",
-    "Salud2022\n",
-    "\n",
-    "**Extraer informacion de**  \n",
-    "Salud2022\n",
-    "\n",
-    "**Transformaciones**\n",
-    "1. Añadir la columna anio, que tiene un valor de 2022 para cada registro\n",
-    "2. Crear columna idFecha a partir del anio\n",
-    "\n",
-    "\n",
-    "Destino de datos: Dim_Fecha\n",
-    "\n",
-    "Campos:\n",
-    "- Anio\n",
-    "- idFecha\n",
-    "\n",
-    "**Fuente de datos**  \n",
-    "Salud2022\n",
-    "\n",
-    "campos  \n",
-    "- P6100\n",
-    "\n",
-    "**Extraer informacion de**  \n",
-    "Salud2022\n",
-    "\n",
-    "**Transformaciones**\n",
-    "1. Renombrar P6100 a regimen_seguridad_social\n",
-    "\n",
-    "\n",
-    "Destino de datos: Dim_Encuestado\n",
-    "\n",
-    "Campos:\n",
-    "- regimen_seguridad_social"
+    "\n"
    ]
   }
  ],
