Correccion de algunos errores en archivo externos, avance defunciones

--- a/cie/Cie.ipynb
+++ b/cie/Cie.ipynb
@@ -823,6 +823,7 @@
    "source": [
     "# 4. Cambios propuestos\n",
     "\n",
+    "# Dim_Muerte\n",
     "\n",
     "**Fuente de datos**\n",
     "Cie\n",
@@ -832,7 +833,7 @@
     "- DESCRIPCION CODIGOS DE CUATRO CARACTERES\n",
     "\n",
     "**Extraer informacion de**  \n",
-    "regiones\n",
+    "Cie\n",
     "\n",
     "**Transformaciones**\n",
     "\n",
