--- a/defunciones/Fetal.ipynb
+++ b/defunciones/Fetal.ipynb
@@ -3906,14 +3906,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 430,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "fetal_df[\"AREA_RES\"] = fetal_df[\"AREA_RES\"].fillna(9)\n",
     "fetal_df[\"N_HIJOSV\"] = fetal_df[\"N_HIJOSV\"].fillna(99)\n",
-    "fetal_df[\"PESO_NAC\"] = fetal_df[\"PESO_NAC\"].fillna(9)\n",
-    "fetal_df[\"P_PMAN_IRIS\"] = fetal_df[\"P_PMAN_IRIS\"].fillna(5)"
+    "fetal_df[\"PESO_NAC\"] = fetal_df[\"PESO_NAC\"].fillna(9)"
    ]
   },
   {
@@ -3941,8 +3940,9 @@
    "source": [
     "# 4. Cambios propuestos\n",
     "\n",
+    "# Hecho_Defuncion_Fetal\n",
     "**Fuente de datos**\n",
-    "Fetal2017\n",
+    "Fetal2017, Fetal2018, Fetal2021, Fetal2022\n",
     "\n",
     "Campos  \n",
     "- MU_PARTO\n",
@@ -3954,38 +3954,71 @@
     "- T_GES_AGRU_CIE\n",
     "\n",
     "**Extraer informacion de**  \n",
-    "Fetal2017\n",
-    "\n",
-    "muerte_relacionada_parto\n",
-    "recibio_asistencia_medica\n",
-    "num_hijos_nacidos_vivos_madre\n",
-    "num_hijos_nacidos_muertos_madre\n",
-    "peso_nacido_vivo\n",
-    "tiempo_gestacion\n",
-    "tiempo_gestacion_CIE\n",
+    "Fetal2017, Fetal2018, Fetal2021, Fetal2022\n",
     "\n",
     "**Transformaciones**\n",
     "1. Renombrar MU_PARTO a muerte_relacionada_parto\n",
     "2. Renombrar ASIS_MED a recibio_asistencia_medica\n",
     "3. Renombrar N_HIJOSV a num_hijos_nacidos_vivos_madre\n",
-    "3. Renombrar N_HIJOSM a num_hijos_nacidos_muertos_madre\n",
-    "3. Renombrar PESO_NAC a peso_nacido_vivo\n",
-    "3. Renombrar T_GES a tiempo_gestacion\n",
-    "3. Renombrar T_GES_AGRU_CIE a tiempo_gestacion_CIE\n",
-    "4. Eliminar registros duplicados\n",
-    "4. Convertir los valores de asiste_control_prenatal: \"Si\" si es 1, \"No\" si es 2, \"No está embarazada\" si es 3, null en otro caso.\n",
-    "5. Convertir los valores de embarazada_o_con_hijos: \"Si\" si es 1, \"No\" si es 2.\n",
-    "6. Convertir los valores de satisfaccion_seguridad_social: \"Muy buena\" si es 1, \"Buena\" si es 2, \"Mala\" si es 3, \"Muy mala\" si es 4, \"No sabe\" si es 9.\n",
-    "7. Añadir la columna año, que tiene un valor de 2017 o 2018 según el archivo\n",
-    "\n",
+    "4. Renombrar N_HIJOSM a num_hijos_nacidos_muertos_madre\n",
+    "5. Renombrar PESO_NAC a peso_nacido_vivo\n",
+    "6. Renombrar T_GES a tiempo_gestacion\n",
+    "7. Renombrar T_GES_AGRU_CIE a tiempo_gestacion_CIE\n",
+    "8. Eliminar registros duplicados\n",
+    "9. Convertir los 0's de num_hijos_nacidos_muertos_madre en 99's\n",
+    "10. Convertir los 3's de ASIS_MED en 9's\n",
+    "11. Convertir los 4's de MU_PARTO en 9's\n",
+    "12. Convertir los 6's de T_GES en 9's\n",
+    "13. Convertir los 6's de T_GES_AGRU_CIE en 9's\n",
+    "14. Convertir los 4's de T_PARTO en 9's\n",
+    "15. Reemplazar los valores nulos de AREA_RES en 9\n",
+    "16. Reemplazar los valores nulos de N_HIJOSV en 99\n",
+    "17. Reemplazar los valores nulos de PESO_NAC en 9\n",
+    "18. Transformar todas las variables categoricas en su correspondiente valor descriptivo\n",
     "\n",
     "Destino de datos: Hecho_Defuncion_Fetal\n",
     "\n",
     "Campos:\n",
-    "- satisfaccion_seguridad_social\n",
-    "- embarazada_o_con_hijos\n",
-    "- asiste_control_prenatal\n",
-    "\n"
+    "\n",
+    "- muerte_relacionada_parto\n",
+    "- recibio_asistencia_medica\n",
+    "- num_hijos_nacidos_vivos_madre\n",
+    "- num_hijos_nacidos_muertos_madre\n",
+    "- peso_nacido_vivo\n",
+    "- tiempo_gestacion\n",
+    "- tiempo_gestacion_CIE\n",
+    "\n",
+    "\n",
+    "# Dim_Atencion_Defuncion\n",
+    "**Fuente de datos**\n",
+    "Fetal2017, Fetal2018, Fetal2021, Fetal2022\n",
+    "\n",
+    "Campos  \n",
+    "\n",
+    "- SIT_DEFUN\n",
+    "- CONS_EXP\n",
+    "- IDPROFCER\n",
+    "- ASIS_MED\n",
+    "\n",
+    "**Extraer informacion de**  \n",
+    "Fetal2017, Fetal2018, Fetal2021, Fetal2022\n",
+    "\n",
+    "**Transformaciones**\n",
+    "1. Renombrar SIT_DEFUN a sitio_defuncion\n",
+    "2. Renombrar CONS_EXP a certificado_por\n",
+    "3. Renombrar IDPROFCER a profesion_certificadora\n",
+    "4. Renombrar ASIS_MED a recibio_asistencia_medica\n",
+    "5. Convertir los 3's de ASIS_MED en 9's\n",
+    "6. Transformar todas las variables categoricas en su correspondiente valor descriptivo\n",
+    "\n",
+    "Destino de datos: Dim_Atencion_Defuncion\n",
+    "\n",
+    "Campos:\n",
+    "\n",
+    "- sitio_defuncion\n",
+    "- certificado_por\n",
+    "- profesion_certificadora\n",
+    "- recibio_asistencia_medica"
    ]
   }
  ],
