--- a/municipios/Regiones.ipynb
+++ b/municipios/Regiones.ipynb
@@ -709,6 +709,7 @@
    "source": [
     "# 4. Cambios propuestos\n",
     "\n",
+    "# Dim_Localización_Geografica\n",
     "\n",
     "**Fuente de datos**\n",
     "Regiones\n",
@@ -722,7 +723,7 @@
     "\n",
     "\n",
     "**Extraer informacion de**  \n",
-    "regiones\n",
+    "Regiones\n",
     "\n",
     "**Transformaciones**\n",
     "1. Eliminar la parte entera del CÓDIGO DANE DEL MUNICIPIO y transformarlo a un string numerico de 3 digitos, rellenando con 0's a la derecha de ser necesario\n",
