Defunciones terminado sin fk's

--- a/defunciones/Fetal.ipynb
+++ b/defunciones/Fetal.ipynb
@@ -3940,6 +3940,160 @@
    "source": [
     "# 4. Cambios propuestos\n",
     "\n",
+    "\n",
+    "# Dim_Fecha\n",
+    "**Fuente de datos**\n",
+    "Fetal2017, Fetal2018, Fetal2021, Fetal2022\n",
+    "\n",
+    "Campos  \n",
+    "\n",
+    "- ANO\n",
+    "- MES\n",
+    "\n",
+    "**Extraer informacion de**  \n",
+    "Fetal2017, Fetal2018, Fetal2021, Fetal2022\n",
+    "\n",
+    "PK idFecha\n",
+    "mes\n",
+    "trimestre\n",
+    "anio\n",
+    "\n",
+    "**Transformaciones**\n",
+    "1. Renombrar ANO a anio\n",
+    "2. Agregar columna trimestre calculada en base al MES\n",
+    "3. Agregar columna idFecha usando el anio y el mes en formato YYYY-MM\n",
+    "\n",
+    "Destino de datos: Dim_Fecha\n",
+    "\n",
+    "Campos:\n",
+    "\n",
+    "- idFecha\n",
+    "- mes\n",
+    "- trimestre\n",
+    "- anio\n",
+    "\n",
+    "\n",
+    "# Dim_Atencion_Defuncion\n",
+    "**Fuente de datos**\n",
+    "Fetal2017, Fetal2018, Fetal2021, Fetal2022\n",
+    "\n",
+    "Campos  \n",
+    "\n",
+    "- SIT_DEFUN\n",
+    "- CONS_EXP\n",
+    "- IDPROFCER\n",
+    "- ASIS_MED\n",
+    "\n",
+    "**Extraer informacion de**  \n",
+    "Fetal2017, Fetal2018, Fetal2021, Fetal2022\n",
+    "\n",
+    "**Transformaciones**\n",
+    "1. Renombrar SIT_DEFUN a sitio_defuncion\n",
+    "2. Renombrar CONS_EXP a certificado_por\n",
+    "3. Renombrar IDPROFCER a profesion_certificadora\n",
+    "4. Renombrar ASIS_MED a recibio_asistencia_medica\n",
+    "5. Convertir los 3's de ASIS_MED en 9's\n",
+    "6. Transformar todas las variables categoricas en su correspondiente valor descriptivo\n",
+    "\n",
+    "Destino de datos: Dim_Atencion_Defuncion\n",
+    "\n",
+    "Campos:\n",
+    "\n",
+    "- sitio_defuncion\n",
+    "- certificado_por\n",
+    "- profesion_certificadora\n",
+    "- recibio_asistencia_medica\n",
+    "\n",
+    "\n",
+    "# Dim_Madre\n",
+    "**Fuente de datos**\n",
+    "Fetal2017, Fetal2018, Fetal2021, Fetal2022\n",
+    "\n",
+    "Campos  \n",
+    "\n",
+    "- EDAD_MADRE\n",
+    "- EST_CIVM\n",
+    "- NIV_EDUM\n",
+    "- ULTCURMAD\n",
+    "- SEG_SOCIAL\n",
+    "\n",
+    "**Extraer informacion de**  \n",
+    "Fetal2017, Fetal2018, Fetal2021, Fetal2022\n",
+    "\n",
+    "**Transformaciones**\n",
+    "1. Renombrar EDAD_MADRE a rango_edad\n",
+    "2. Renombrar EST_CIVM a estado_conyugal\n",
+    "3. Renombrar NIV_EDUM a maximo_nivel_educativo\n",
+    "4. Renombrar ULTCURMAD a maximo_año_o_grado_aprobado\n",
+    "5. Renombrar SEG_SOCIAL a regimen_seguridad_social\n",
+    "6. Reemplazar todos los 0's de maximo_año_o_grado_aprobado a 99's\n",
+    "7. Transformar todas las variables categoricas en su correspondiente valor descriptivo\n",
+    "\n",
+    "Destino de datos: Dim_Madre\n",
+    "\n",
+    "Campos:\n",
+    "\n",
+    "- rango_edad\n",
+    "- estado_conyugal\n",
+    "- maximo_nivel_educativo\n",
+    "- maximo_año_o_grado_aprobado\n",
+    "- regimen_seguridad_social\n",
+    "\n",
+    "# Dim_Hijo\n",
+    "\n",
+    "**Fuente de datos**\n",
+    "Fetal2017, Fetal2018, Fetal2021, Fetal2022\n",
+    "\n",
+    "Campos  \n",
+    "\n",
+    "- SEXO\n",
+    "- PESO_NAC\n",
+    "\n",
+    "**Extraer informacion de**  \n",
+    "Fetal2017, Fetal2018, Fetal2021, Fetal2022\n",
+    "\n",
+    "**Transformaciones**\n",
+    "1. Renombrar PESO_NAC a peso\n",
+    "2. Agregar la columna talla y usar null como su valor\n",
+    "3. Reemplazar todos los nulos de peso a 9's\n",
+    "4. Transformar todas las variables categoricas en su correspondiente valor descriptivo\n",
+    "\n",
+    "Destino de datos: Dim_Hijo\n",
+    "\n",
+    "Campos:\n",
+    "\n",
+    "- sexo\n",
+    "- peso\n",
+    "- talla\n",
+    "\n",
+    "# Dim_Parto\n",
+    "\n",
+    "**Fuente de datos**\n",
+    "Fetal2017, Fetal2018, Fetal2021, Fetal2022\n",
+    "\n",
+    "Campos  \n",
+    "\n",
+    "- T_PARTO\n",
+    "- TIPO_EMB\n",
+    "\n",
+    "**Extraer informacion de**  \n",
+    "Fetal2017, Fetal2018, Fetal2021, Fetal2022\n",
+    "\n",
+    "**Transformaciones**\n",
+    "1. Renombrar T_PARTO a tipo_parto\n",
+    "2. Renombrar TIPO_EMB a multiplicidad_embarazo\n",
+    "3. Agregar la columna talla y usar null como su valor\n",
+    "4. Reemplazar todos los 4's de T_PARTO de peso a 9's\n",
+    "5. Transformar todas las variables categoricas en su correspondiente valor descriptivo\n",
+    "\n",
+    "\n",
+    "Destino de datos: Dim_Parto\n",
+    "\n",
+    "Campos:\n",
+    "\n",
+    "- tipo_parto\n",
+    "- multiplicidad_embarazo\n",
+    "\n",
     "# Hecho_Defuncion_Fetal\n",
     "**Fuente de datos**\n",
     "Fetal2017, Fetal2018, Fetal2021, Fetal2022\n",
@@ -3989,36 +4143,8 @@
     "- tiempo_gestacion_CIE\n",
     "\n",
     "\n",
-    "# Dim_Atencion_Defuncion\n",
-    "**Fuente de datos**\n",
-    "Fetal2017, Fetal2018, Fetal2021, Fetal2022\n",
     "\n",
-    "Campos  \n",
-    "\n",
-    "- SIT_DEFUN\n",
-    "- CONS_EXP\n",
-    "- IDPROFCER\n",
-    "- ASIS_MED\n",
-    "\n",
-    "**Extraer informacion de**  \n",
-    "Fetal2017, Fetal2018, Fetal2021, Fetal2022\n",
-    "\n",
-    "**Transformaciones**\n",
-    "1. Renombrar SIT_DEFUN a sitio_defuncion\n",
-    "2. Renombrar CONS_EXP a certificado_por\n",
-    "3. Renombrar IDPROFCER a profesion_certificadora\n",
-    "4. Renombrar ASIS_MED a recibio_asistencia_medica\n",
-    "5. Convertir los 3's de ASIS_MED en 9's\n",
-    "6. Transformar todas las variables categoricas en su correspondiente valor descriptivo\n",
-    "\n",
-    "Destino de datos: Dim_Atencion_Defuncion\n",
-    "\n",
-    "Campos:\n",
-    "\n",
-    "- sitio_defuncion\n",
-    "- certificado_por\n",
-    "- profesion_certificadora\n",
-    "- recibio_asistencia_medica"
+    "\n"
    ]
   }
  ],
