--- a/salud/Salud.ipynb
+++ b/salud/Salud.ipynb
@@ -1855,58 +1855,7 @@
    "source": [
     "# 4. Cambios propuestos\n",
     "\n",
-    "## Hecho_Encuesta_Salud\n",
-    "**Fuente de datos**  \n",
-    "Salud2017, Salud2018\n",
     "\n",
-    "Campos\n",
-    "- P5694\t\n",
-    "- P6181\n",
-    "- P5672\n",
-    "\n",
-    "**Extraer informacion de**  \n",
-    "Salud2017, Salud2018\n",
-    "\n",
-    "**Transformaciones**\n",
-    "1. Renombrar P5694 a asiste_control_prenatal\n",
-    "2. Renombrar P5672 a embarazada_o_con_hijos\n",
-    "3. Renombrar P6181 a satisfaccion_seguridad_social\n",
-    "4. Convertir los valores de asiste_control_prenatal: \"Si\" si es 1, \"No\" si es 2, \"No está embarazada\" si es 3, null en otro caso.\n",
-    "5. Convertir los valores de embarazada_o_con_hijos: \"Si\" si es 1, \"No\" si es 2.\n",
-    "6. Convertir los valores de satisfaccion_seguridad_social: \"Muy buena\" si es 1, \"Buena\" si es 2, \"Mala\" si es 3, \"Muy mala\" si es 4, \"No sabe\" si es 9.\n",
-    "\n",
-    "Destino de datos: Hecho_Encuesta_Salud\n",
-    "\n",
-    "Campos:\n",
-    "- satisfaccion_seguridad_social\n",
-    "- embarazada_o_con_hijos\n",
-    "- asiste_control_prenatal\n",
-    "\n",
-    "**Fuente de datos**  \n",
-    "Salud2021, Salud2022\n",
-    "\n",
-    "Campos\n",
-    "- P5694\t\n",
-    "- P6181\n",
-    "- P3335\n",
-    "\n",
-    "**Extraer informacion de**  \n",
-    "Salud2021, Salud2022\n",
-    "\n",
-    "**Transformaciones**\n",
-    "1. Renombrar P5694 a asiste_control_prenatal\n",
-    "2. Renombrar P3335 a embarazada_o_con_hijos\n",
-    "3. Renombrar P6181 a satisfaccion_seguridad_social\n",
-    "4. Convertir los valores de asiste_control_prenatal: \"Si\" si es 1, \"No\" si es 2, \"No está embarazada\" si es 3, null en otro caso.\n",
-    "5. Convertir los valores de embarazada_o_con_hijos: \"Si\" si es 1, \"No\" si es 2.\n",
-    "6. Convertir los valores de satisfaccion_seguridad_social: \"Muy buena\" si es 1, \"Buena\" si es 2, \"Mala\" si es 3, \"Muy mala\" si es 4, \"No sabe\" si es 9.\n",
-    "\n",
-    "Destino de datos: Hecho_Encuesta_Salud\n",
-    "\n",
-    "Campos:\n",
-    "- satisfaccion_seguridad_social\n",
-    "- embarazada_o_con_hijos\n",
-    "- asiste_control_prenatal\n",
     "\n",
     "## Dim_Fecha\n",
     "\n",
@@ -1919,6 +1868,8 @@
     "**Transformaciones**\n",
     "1. Añadir la columna anio, que tiene el valor del año correspondiente al archivo\n",
     "2. Crear columna idFecha a partir del anio\n",
+    "3. Crear la columna mes con valores nulos\n",
+    "4. Crear la columna trimestre con valores nulos\n",
     "\n",
     "\n",
     "Destino de datos: Dim_Fecha\n",
@@ -1926,27 +1877,97 @@
     "Campos:\n",
     "- Anio\n",
     "- idFecha\n",
+    "- Mes\n",
+    "- Trimestre\n",
     "\n",
     "\n",
-    "## Dim_Encuestado\n",
+    "## Dim_Encuestado_salud\n",
     "\n",
     "**Fuente de datos**  \n",
     "Salud2017, Salud2018, Salud2021, Salud2022\n",
     "\n",
     "campos  \n",
+    "- P6090\n",
+    "- P768\n",
     "- P6100\n",
     "\n",
     "**Extraer informacion de**  \n",
     "Salud2017, Salud2018, Salud2021, Salud2022\n",
     "\n",
     "**Transformaciones**\n",
-    "1. Renombrar P6100 a regimen_seguridad_social\n",
+    "\n",
+    "1. Renombrar P6090 a esta_afiliado\n",
+    "2. Renombrar P768 a razon_no_afiliacion\n",
+    "3. Renombrar P6100 a regimen_seguridad_social\n",
     "\n",
     "\n",
-    "Destino de datos: Dim_Encuestado\n",
+    "\n",
+    "Destino de datos: Dim_Encuestado_salud\n",
     "\n",
     "Campos:\n",
+    "- esta_afiliado\n",
+    "- razon_no_afiliacion\n",
     "- regimen_seguridad_social\n",
+    "\n",
+    "\n",
+    "## Hecho_Encuesta_Salud\n",
+    "**Fuente de datos**  \n",
+    "Salud2017, Salud2018\n",
+    "\n",
+    "Campos\n",
+    "- P6090\n",
+    "- P6181\n",
+    "- P5672\n",
+    "- P5694\t\n",
+    "\n",
+    "**Extraer informacion de**  \n",
+    "Salud2017, Salud2018\n",
+    "\n",
+    "**Transformaciones**\n",
+    "1. Renombrar P6090 a esta_afiliado\n",
+    "2. Renombrar P5694 a asiste_control_prenatal\n",
+    "3. Renombrar P5672 a embarazada_o_con_hijos\n",
+    "4. Renombrar P6181 a satisfaccion_seguridad_social\n",
+    "5. Convertir los valores de asiste_control_prenatal: \"Si\" si es 1, \"No\" si es 2, \"No está embarazada\" si es 3, null en otro caso.\n",
+    "6. Convertir los valores de embarazada_o_con_hijos: \"Si\" si es 1, \"No\" si es 2.\n",
+    "7. Convertir los valores de satisfaccion_seguridad_social: \"Muy buena\" si es 1, \"Buena\" si es 2, \"Mala\" si es 3, \"Muy mala\" si es 4, \"No sabe\" si es 9.\n",
+    "\n",
+    "Destino de datos: Hecho_Encuesta_Salud\n",
+    "\n",
+    "Campos:\n",
+    "- esta_afiliado\n",
+    "- satisfaccion_seguridad_social\n",
+    "- embarazada_o_con_hijos\n",
+    "- asiste_control_prenatal\n",
+    "\n",
+    "**Fuente de datos**  \n",
+    "Salud2021, Salud2022\n",
+    "\n",
+    "Campos\n",
+    "- P6090\n",
+    "- P6181\n",
+    "- P3335\n",
+    "- P5694\t\n",
+    "\n",
+    "**Extraer informacion de**  \n",
+    "Salud2021, Salud2022\n",
+    "\n",
+    "**Transformaciones**\n",
+    "1. Renombrar P6090 a esta_afiliado\n",
+    "2. Renombrar P5694 a asiste_control_prenatal\n",
+    "3. Renombrar P3335 a embarazada_o_con_hijos\n",
+    "4. Renombrar P6181 a satisfaccion_seguridad_social\n",
+    "5. Convertir los valores de asiste_control_prenatal: \"Si\" si es 1, \"No\" si es 2, \"No está embarazada\" si es 3, null en otro caso.\n",
+    "6. Convertir los valores de embarazada_o_con_hijos: \"Si\" si es 1, \"No\" si es 2.\n",
+    "7. Convertir los valores de satisfaccion_seguridad_social: \"Muy buena\" si es 1, \"Buena\" si es 2, \"Mala\" si es 3, \"Muy mala\" si es 4, \"No sabe\" si es 9.\n",
+    "\n",
+    "Destino de datos: Hecho_Encuesta_Salud\n",
+    "\n",
+    "Campos:\n",
+    "- esta_afiliado\n",
+    "- satisfaccion_seguridad_social\n",
+    "- embarazada_o_con_hijos\n",
+    "- asiste_control_prenatal\n",
     "\n"
    ]
   }
