Departamento en dimension madre

--- a/defunciones/Fetal.ipynb
+++ b/defunciones/Fetal.ipynb
@@ -4016,9 +4016,11 @@
     "- NIV_EDUM\n",
     "- ULTCURMAD\n",
     "- SEG_SOCIAL\n",
+    "- CODPTORE\n",
+    "- CODMUNRE\n",
     "\n",
     "**Extraer informacion de**  \n",
-    "Fetal2017, Fetal2018, Fetal2021, Fetal2022\n",
+    "Fetal2017, Fetal2018, Fetal2021, Fetal2022, RegionesFormato\n",
     "\n",
     "**Transformaciones**\n",
     "1. Renombrar EDAD_MADRE a rango_edad\n",
@@ -4028,6 +4030,7 @@
     "5. Renombrar SEG_SOCIAL a regimen_seguridad_social\n",
     "6. Reemplazar todos los 0's de maximo_año_o_grado_aprobado a 99's\n",
     "7. Transformar todas las variables categoricas en su correspondiente valor descriptivo\n",
+    "9. Obtener localizacion_habitual con base en el código del departamento (CODPTORE) y municipio (CODMUNRE) de la madre y el archivo RegionesFormato\n",
     "\n",
     "Destino de datos: Dim_Madre\n",
     "\n",
@@ -4038,6 +4041,7 @@
     "- maximo_nivel_educativo\n",
     "- maximo_año_o_grado_aprobado\n",
     "- regimen_seguridad_social\n",
+    "- localizacion_habitual\n",
     "\n",
     "# Dim_Hijo\n",
     "\n",
