Fuente de localizaciones para la dimension madre

--- a/defunciones/Fetal.ipynb
+++ b/defunciones/Fetal.ipynb
@@ -4019,6 +4019,16 @@
     "- CODPTORE\n",
     "- CODMUNRE\n",
     "\n",
+    "**Fuente de datos**\n",
+    "RegionesFormato\n",
+    "\n",
+    "Campos  \n",
+    "- REGION\t\n",
+    "- CÓDIGO DANE DEL DEPARTAMENTO\t\n",
+    "- DEPARTAMENTO\t\n",
+    "- CÓDIGO DANE DEL MUNICIPIO\t\n",
+    "- MUNICIPIO\n",
+    "\n",
     "**Extraer informacion de**  \n",
     "Fetal2017, Fetal2018, Fetal2021, Fetal2022, RegionesFormato\n",
     "\n",
