--- a/nacimientos/Nacimientos.ipynb
+++ b/nacimientos/Nacimientos.ipynb
@@ -3653,9 +3653,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Aquí tienes una propuesta de cambios para tu análisis de estadísticas vitales basado en el modelo de dimensiones y hechos similar al que sugeriste previamente. Este enfoque usa el concepto de un almacén de datos (Data Warehouse), con tablas de dimensiones y hechos, para modelar los datos de nacimiento que tienes.\n",
-    "\n",
-    "## **Propuesta de Cambios en las Dimensiones y Hechos**\n",
+    "## 4. Cambios Propuestos\n",
     "\n",
     "---\n",
     "\n",
