--- a/personas/Personas.ipynb
+++ b/personas/Personas.ipynb
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 58,
    "metadata": {
     "cell_id": "89c7542409c84bafa5de8438ac6d67c9",
     "colab": {
@@ -146,12 +146,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Las columnas de persona2017 son: ['Clase', 'Dominio', 'Oc', 'P6020', 'P6090', 'P6100', 'P6210', 'P6210s1', 'P7150', 'Pet']\n",
-      "Las columnas de persona2018 son: ['Clase', 'Dominio', 'Oc', 'P6020', 'P6090', 'P6100', 'P6210', 'P6210s1', 'P7150', 'Pet']\n",
-      "Las columnas de persona2021 son: ['Clase', 'Dominio', 'Oc', 'P6020', 'P6090', 'P6100', 'P6210', 'P6210s1', 'P7150', 'Pet']\n",
-      "Las columnas de persona2022 son: ['Clase', 'Dominio', 'Oc', 'P6090', 'P6100', 'P7150', 'Pet']\n",
-      "Las columnas en común son: {'Pet', 'Clase', 'Dominio', 'P7150', 'P6090', 'Oc', 'P6100'}\n",
-      "Las columnas que no estan en todos los datasets son: {'P6020', 'P6210', 'P6210s1'}\n"
+      "Las columnas de persona2017 son: ['Clase', 'Dominio', 'Oc', 'Pet']\n",
+      "Las columnas de persona2018 son: ['Clase', 'Dominio', 'Oc', 'Pet']\n",
+      "Las columnas de persona2021 son: ['Clase', 'Dominio', 'Oc', 'Pet']\n",
+      "Las columnas de persona2022 son: ['Clase', 'Dominio', 'Oc', 'Pet']\n",
+      "Las columnas en común son: {'Oc', 'Clase', 'Dominio', 'Pet'}\n",
+      "Las columnas que no estan en todos los datasets son: {'P6020', 'P6210s1', 'P6210', 'P7150', 'P6090', 'P6100'}\n"
      ]
     }
    ],
@@ -2305,7 +2305,33 @@
     "3. Renombrar P6210 a maximo_nivel_educativo\n",
     "4. Renombrar P6210s1 a maximo_año_o_grado_aprobado\n",
     "\n",
+    "Destino de datos: Dim_Encuestado_personas\n",
     "\n",
+    "Campos:\n",
+    "- sexo\n",
+    "- regimen_seguridad_social\n",
+    "- maximo_nivel_educativo\n",
+    "- maximo_año_o_grado_aprobado\n",
+    "\n",
+    "\n",
+    "**Fuente de datos**  \n",
+    "Personas2022\n",
+    "\n",
+    "campos  \n",
+    "- P3271\n",
+    "- P6100\n",
+    "- P6210\n",
+    "- P6210s1\n",
+    "\n",
+    "**Extraer informacion de**  \n",
+    "Personas2022\n",
+    "\n",
+    "**Transformaciones**\n",
+    "\n",
+    "1. Renombrar P3271 a sexo\n",
+    "2. Renombrar P6100 a regimen_seguridad_social\n",
+    "3. Renombrar P6210 a maximo_nivel_educativo\n",
+    "4. Renombrar P6210s1 a maximo_año_o_grado_aprobado\n",
     "\n",
     "Destino de datos: Dim_Encuestado_personas\n",
     "\n",
@@ -2316,13 +2342,14 @@
     "- maximo_año_o_grado_aprobado\n",
     "\n",
     "\n",
+    "\n",
     "## Hecho_Encuesta_Personas\n",
     "**Fuente de datos**  \n",
-    "Personas2017, Personas2018\n",
+    "Personas2017, Personas2018, Personas2021, Personas2022\n",
     "\n",
     "Campos\n",
     "- Estrato1\n",
-    "- P6181\n",
+    "- P7150\n",
     "- Pet\n",
     "- Ocupado\t\n",
     "\n",
@@ -2331,10 +2358,8 @@
     "\n",
     "**Transformaciones**\n",
     "1. Renombrar Estrato1 a estrato_energia\n",
-    "2. Renombrar P5694 a busca_trabajo\n",
+    "2. Renombrar P7150 a busca_trabajo\n",
     "3. Renombrar Pet a en_edad_de_trabajar\n",
-    "4. Renombrar Ocupado a ocupado\n",
-    "\n",
     "\n",
     "Destino de datos: Hecho_Encuesta_Personas\n",
     "\n",
